Fix remaining layout issues for issue #1274

--- a/media/src/css/subtitle-editor/subtitle-editor.scss
+++ b/media/src/css/subtitle-editor/subtitle-editor.scss
@@ -1618,9 +1618,10 @@ aside.modal {
 }
 
 aside.modal#guidelines-modal {
+    width: 600px;
     div.modal-content {
-        max-height: 385px;
-        overflow: scroll;
+        height: 400px;
+        overflow: auto;
         td {
             padding: 8px;
             font-size: 12px;
@@ -1631,11 +1632,15 @@ aside.modal#guidelines-modal {
                 padding: 15px 0;
             }
         }
-    a.expand-link {
-        padding: 10px 0px 10px 0px;
-        line-height: 30px;
-        font-size: 14px;
-        font-weight: bold;
+        a {
+            color: white;
+            text-decoration: none;
+            &.expand-link {
+                padding: 10px 0px 10px 0px;
+                line-height: 30px;
+                font-size: 14px;
+                font-weight: bold;
+            }
+        }
     }
-}
 }
